--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #E3BC9A;
+  background-color: #FCC3C2;
   padding: 15px 30px;
   flex-wrap: wrap;
 }
@@ -135,7 +135,7 @@ html {
   display: inline-block;
   margin-top: 25px;
   padding: 12px 30px;
-  background-color: #E3BC9A;
+  background-color: #FCC3C2;
   color: black;
   font-size: 50px;
   font-weight: bold;
@@ -205,7 +205,7 @@ html {
   left: 25px;
   bottom: 75px;
   padding: 12px 24px;
-  background-color: #E3BC9A;
+  background-color: #FCC3C2;
   color: white;
   font-weight: bold;
   text-decoration: none;
@@ -279,7 +279,7 @@ html {
 
 .product-card button {
   margin-top: 10px;
-  background-color: #E3BC9A;
+  background-color: #FCC3C2;
   color: white;
   font-size: 18px;
   font-weight: bold;
@@ -512,3 +512,4 @@ html {
     padding: 10px 20px;
   }
 }
+
